fix build errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,16 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "composite": true, // Enable composite mode
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
