--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.23.1",
+    "flag-icons": "^7.3.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
