--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^2.23.1",
     "flag-icons": "^7.3.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
